# advent_of_code_python

./: .gitignore  pyproject.toml  setup_new_day.py
templates/: solution.ipynb
utils/: geometryUtils.py  matrixUtils.py  solutionRoot.py
y2023/d17/: p1.py  p2.py  small_example.data
y2024/d01/: solution.ipynb
y2024/d02/: solution.ipynb
y2024/d03/: solution.ipynb
y2024/d04/: solution.ipynb
y2024/d05/: solution.ipynb
y2024/d06/: solution.ipynb
y2025/d01/: p1.py  p2.py
y2025/d02/: solution.ipynb
y2025/d03/: solution.ipynb
y2025/d04/: solution.ipynb
y2025/d05/: solution.ipynb
y2025/d06/: solution.ipynb
y2025/d07/: solution.ipynb
y2025/d08/: solution.ipynb
y2025/d09/: solution.ipynb
y2025/d10/: solution.ipynb
y2025/d11/: solution.ipynb
