[tool.poetry]
name = "aoc-python"
version = "1.0"
description = ""
authors = ["Vlad Mocanu z00319SB <vlad.mocanu.alexandru@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
jupyter = "^1.1.1"
numpy = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
